// generated by openapi-gen-protobuf

syntax = "proto3";

package erda.testplatform;

option go_package = "github.com/erda-project/erda-proto-go/openapiv1/testplatform/testset/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

import "common/openapi.proto";
import "common/identity.proto";

message TestSetCleanFromRecycleBinRequest {
    uint64 testSetID = 1 [json_name = "-"];
}
message TestSet {
    uint64 ID = 1 [json_name = "id"];
    string name = 2;
    uint64 projectID = 3;
    uint64 parentID = 4;
    bool recycled = 5;
    string directory = 6 [json_name = "directoryName"];
    int64 order = 7;
    string creatorID = 8;
    string updaterID = 9;
}
message TestSetRecoverFromRecycleBinRequest {
    uint64 testSetID = 1 [json_name = "-"];
    optional uint64 recoverToTestSetID = 2;
}
message TestSetCopyResponse {
    uint64 data = 1;
}
message TestSetCreateResponse {
    optional google.protobuf.Value data = 1;
}
message TestSetGetResponse {
    optional google.protobuf.Value data = 1;
}
message TestSetListRequest {
    bool recycled = 1;
    optional uint64 parentID = 2;
    optional uint64 projectID = 3;
    repeated uint64 testSetIDs = 4;
    bool noSubTestSets = 5;
}
message TestSetRecoverFromRecycleBinResponse {
}
message TestSetRecycleResponse {
}
message TestSetUpdateRequest {
    uint64 testSetID = 1 [json_name = "testsetID"];
    optional string name = 2;
    optional uint64 moveToParentID = 3;
}
message TestSetCleanFromRecycleBinResponse {
}
message TestSetCopyRequest {
    uint64 copyToTestSetID = 1;
    uint64 testSetID = 2 [json_name = "-"];
}
message TestSetListResponse {
    repeated google.protobuf.Value data = 1;
}
message TestSetRecycleRequest {
    uint64 testSetID = 1 [json_name = "-"];
    bool isRoot = 2 [json_name = "-"];
}
message TestSetCreateRequest {
    optional uint64 projectID = 1;
    optional uint64 parentID = 2;
    string name = 3;
}
message GET_Request {
    string testSetID = 1; // generated from path variable: testSetID. You should change the proto type if necessary
}
// generate service from openapi spec: testplatform_testset
service testplatform_testset {
    option (erda.common.openapi_service) = {
        service: "testplatform",
    };

    rpc CLEAN_FROM_RECYCLE_BIN (TestSetCleanFromRecycleBinRequest) returns (TestSetCleanFromRecycleBinResponse) {
        option (google.api.http) = {
            delete: "/api/testsets/{testSetID}/actions/clean-from-recycle-bin",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets/{testSetID}/actions/clean-from-recycle-bin",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 从回收站彻底删除测试集(递归)",
        };
    };
    rpc COPY (TestSetCopyRequest) returns (TestSetCopyResponse) {
        option (google.api.http) = {
            post: "/api/testsets/{testSetID}/actions/copy",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets/{testSetID}/actions/copy",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 测试集复制，递归复制子测试集和测试用例",
        };
    };
    rpc CREATE (TestSetCreateRequest) returns (TestSetCreateResponse) {
        option (google.api.http) = {
            post: "/api/testsets",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 创建测试集",
        };
    };
    rpc GET (GET_Request) returns (TestSetGetResponse) {
        option (google.api.http) = {
            get: "/api/testsets/{testSetID}",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets/{testSetID}",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 测试集详情",
        };
    };
    rpc LIST (TestSetListRequest) returns (TestSetListResponse) {
        option (google.api.http) = {
            get: "/api/testsets",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 测试集列表",
        };
    };
    rpc RECOVER_FROM_RECYCLE_BIN (TestSetRecoverFromRecycleBinRequest) returns (TestSetRecoverFromRecycleBinResponse) {
        option (google.api.http) = {
            post: "/api/testsets/{testSetID}/actions/recover-from-recycle-bin",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets/{testSetID}/actions/recover-from-recycle-bin",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 从回收站恢复测试集(递归)",
        };
    };
    rpc RECYCLE (TestSetRecycleRequest) returns (TestSetRecycleResponse) {
        option (google.api.http) = {
            post: "/api/testsets/{testSetID}/actions/recycle",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets/{testSetID}/actions/recycle",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 回收测试集至回收站，递归包含子测试集和测试用例",
        };
    };
    rpc UPDATE (TestSetUpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/api/testsets/{testSetID}",
        };
        option (erda.common.openapi) = {
            path: "/api/testsets/{testSetID}",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 更新测试集",
        };
    };
}
